--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </div>
         <div class="c-container">
           <label>Celsius</label>
-          <input type="number" id="converter" />
+          <input type="text" id="converter" />
           <button onclick="convert()">Convert</button>
           <h3>Fahrenheit</h3>
           <p id="results-f"></p>
